actix-web-codegen/tests/trybuild/route-malformed-path-fail.stderr
error: custom attribute panicked
 --> $DIR/route-malformed-path-fail.rs:3:1
  |
3 | #[get("/{")]
  | ^^^^^^^^^^^^
  |
  = help: message: pattern "{" contains malformed dynamic segment

error: custom attribute panicked
 --> $DIR/route-malformed-path-fail.rs:8:1
  |
8 | #[get("/{foo")]
  | ^^^^^^^^^^^^^^^
  |
  = help: message: pattern "{foo" contains malformed dynamic segment

error: custom attribute panicked
  --> $DIR/route-malformed-path-fail.rs:13:1
   |
13 | #[get("/{}")]
   | ^^^^^^^^^^^^^
   |
   = help: message: Wrong path pattern: "/{}" empty capture group names are not allowed

error: custom attribute panicked
  --> $DIR/route-malformed-path-fail.rs:23:1
   |
23 | #[get("/{tail:\\d+}*")]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: custom regex is not supported for tail match

error: custom attribute panicked
  --> $DIR/route-malformed-path-fail.rs:28:1
   |
28 | #[get("/{a}/{b}/{c}/{d}/{e}/{f}/{g}/{h}/{i}/{j}/{k}/{l}/{m}/{n}/{o}/{p}/{q}")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: Only 16 dynamic segments are allowed, provided: 17
